cmake_minimum_required(VERSION 3.14)
project(OneDayOneCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(Bitmap Bitmap.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(QuickSort_list QuickSort_list.cpp)
add_executable(InsertSort InsertSort.cpp)
add_executable(HeapSort HeapSort.cpp)
add_executable(BinarySearchTree BinarySearchTree.cpp)