add_executable(Bitmap Bitmap.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(QuickSelect QuickSelect.cpp)
add_executable(MergeSort MergeSort.cpp)
add_executable(QuickSort_list QuickSort_list.cpp)
add_executable(ThreeWayPartition ThreeWayPartition.cpp)
add_executable(HashTable HashTable.cpp)
add_executable(InsertSort InsertSort.cpp)
add_executable(HeapSort HeapSort.cpp)
add_executable(BinarySearchTree BinarySearchTree.cpp)
add_executable(AVLTree AVLTree.cpp)
add_executable(KMP KMP.cpp)
add_executable(memcpy memcpy.cpp)
add_executable(BubbleSort BubbleSort.cpp)